<resources>
    <string name="app_name">Plantar Siderurgica S/A</string>
    <string name="apk_name">Plantar App</string>

    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Usuário</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="welcome">"Bem Vindo(a) !"</string>
    <string name="invalid_username">Usuário Inválido</string>
    <string name="invalid_password">Senha Inválida</string>
    <string name="login_failed">"Login Falhou"</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="limpar">C</string>
    <string name="backspace">⌫</string>
    <string name="dividir">÷</string>
    <string name="raiz">√</string>
    <string name="quadrado">x²</string>
    <string name="potencia10">10\u207F</string>
    <string name="posneg">±</string>
    <string name="abreParenteses">(</string>
    <string name="fechaParenteses">)</string>

    <string-array name="array_nivel">
        <item>OPERADOR</item>
        <item>ADMIN</item>
    </string-array>
</resources>
